force-app/main/default/objects/Campagne_de_vaccination__c/Campagne_de_vaccination__c.object-meta.xml
<CustomObject>
    <label>Campagne de vaccination</label>
    <nameField>
        <label>Nom</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campagne de vaccinations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>