force-app/main/default/objects/Campagne_de_vaccination__c/fields/Date_Debut__c.field-meta.xml
<CustomField>
    <fullName>Date_Debut__c</fullName>
    <label>Date Debut</label>
    <required>true</required>
    <type>Date</type>
</CustomField>