force-app/main/default/objects/Campagne_de_vaccination__c/fields/Date_Fin__c.field-meta.xml
<CustomField>
    <fullName>Date_Fin__c</fullName>
    <label>Date Fin</label>
    <required>true</required>
    <type>Date</type>
</CustomField>