force-app/main/default/objects/Campagne_de_vaccination__c/fields/montant_total__c.field-meta.xml
<CustomField>
    <fullName>montant_total__c</fullName>
    <formula>nombre_pv_total__c  *  prix_par_poulet__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>montant total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>