force-app/main/default/objects/Campagne_de_vaccination__c/fields/nombre_pv_total__c.field-meta.xml
<CustomField>
    <fullName>nombre_pv_total__c</fullName>
    <label>nombre pv total</label>
    <summaryForeignKey>Poulet_Vaccine__c.Camp_Vacccination__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>