force-app/main/default/objects/Campagne_de_vaccination__c/fields/prix_par_poulet__c.field-meta.xml
<CustomField>
    <fullName>prix_par_poulet__c</fullName>
    <label>prix par poulet</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>